Add functionality to generate a custom grid Add hover effect to imitate the "etch-a-sketch" effect

--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
     <script src="./script.js" defer></script>
     <title>Etch-a-Sketch</title>
   </head>
-  <body></body>
+  <body>
+    <button id="generate-grid">Generate Grid</button>
+    <div id="grid-container">
+      <div id="container"></div>
+    </div>
+  </body>
 </html>
