--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <title>Etch-a-Sketch</title>
   </head>
   <body>
-    <button id="generate-grid">Generate Grid</button>
-    <div id="grid-container">
-      <div id="container"></div>
+    <h1>Etch-a-Sketch</h1>
+    <div id="main-container">
+      <div id="controls">
+        <button id="generate-grid">Generate Grid</button>
+      </div>
+      <div id="grid-container"></div>
     </div>
   </body>
 </html>
