--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Etch-a-Sketch</title>
   </head>
   <body>
-    <h1>Etch-a-Sketch</h1>
+    <h1 id="title">Etch-a-Sketch</h1>
     <div id="main-container">
       <div id="controls">
         <button id="generate-grid">Generate Grid</button>
